day2/07_ingress/hello-app/hello.deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment1
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello1
  template:
    metadata:
      name: hello-pod
      labels:
        app: hello1
    spec:
      containers:
      - name: hello-container
        image: gcr.io/google-samples/hello-app:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service1
spec:
  selector:
    app: hello1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
