day2/07_ingress/hello-app/hello.ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello1  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: mydomain.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/v1(.*)"
        backend:
          service:
            name: hello-service1
            port:
              number: 80
